Auto layout wasn't working properly at all

--- a/timeboARd/Base.lproj/Main.storyboard
+++ b/timeboARd/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -229,11 +228,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view tag="1000" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d5Z-nL-RUb">
+                            <view tag="1000" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d5Z-nL-RUb">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
                                 <subviews>
-                                    <button opaque="NO" tag="9" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1J3-St-7ty">
-                                        <rect key="frame" x="282" y="8" width="30" height="26"/>
+                                    <button opaque="NO" tag="9" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1J3-St-7ty">
+                                        <rect key="frame" x="282" y="13" width="30" height="26"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="26" id="b9h-OB-uC5"/>
                                         </constraints>
@@ -255,12 +254,9 @@
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Board Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vL9-fF-Fbs" userLabel="boardNameField">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Board Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vL9-fF-Fbs" userLabel="boardNameField">
                                         <rect key="frame" x="8" y="66" width="304" height="40"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="oFb-U5-dhf"/>
-                                        </constraints>
                                         <color key="textColor" white="1" alpha="0.69549978599999995" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -279,34 +275,37 @@
                                             <action selector="demoButtonAction:" destination="V7u-7R-pwl" eventType="touchUpInside" id="cv3-oy-bNS"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Uploaded!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qT2-6B-NuX">
-                                        <rect key="frame" x="8" y="8" width="304" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Uploaded!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qT2-6B-NuX">
+                                        <rect key="frame" x="46" y="13" width="228" height="30"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="qT2-6B-NuX" firstAttribute="top" secondItem="d5Z-nL-RUb" secondAttribute="top" constant="33" id="5d2-XK-D2T"/>
-                                    <constraint firstItem="1J3-St-7ty" firstAttribute="top" secondItem="d5Z-nL-RUb" secondAttribute="topMargin" id="ECM-qh-YCu"/>
-                                    <constraint firstItem="qT2-6B-NuX" firstAttribute="leading" secondItem="d5Z-nL-RUb" secondAttribute="leadingMargin" id="PSY-m8-aAw"/>
-                                    <constraint firstItem="1J3-St-7ty" firstAttribute="trailing" secondItem="qT2-6B-NuX" secondAttribute="trailing" id="RIw-od-9ig"/>
-                                    <constraint firstItem="1J3-St-7ty" firstAttribute="trailing" secondItem="d5Z-nL-RUb" secondAttribute="trailingMargin" id="cFx-i3-vok"/>
-                                    <constraint firstItem="c3i-SA-w6s" firstAttribute="bottom" secondItem="d5Z-nL-RUb" secondAttribute="bottomMargin" id="nYa-m1-O9A"/>
-                                    <constraint firstItem="qT2-6B-NuX" firstAttribute="leading" secondItem="vL9-fF-Fbs" secondAttribute="leading" id="otf-Qb-hsY"/>
-                                    <constraint firstAttribute="height" constant="300" id="qFS-oM-Doz"/>
-                                    <constraint firstItem="qT2-6B-NuX" firstAttribute="trailing" secondItem="vL9-fF-Fbs" secondAttribute="trailing" id="qOQ-Tl-qqz"/>
-                                    <constraint firstItem="vL9-fF-Fbs" firstAttribute="top" secondItem="qT2-6B-NuX" secondAttribute="bottom" constant="3" id="uqP-4c-4Ew"/>
-                                    <constraint firstItem="vL9-fF-Fbs" firstAttribute="top" secondItem="1J3-St-7ty" secondAttribute="bottom" constant="32" id="xZv-eN-9eE"/>
+                                    <constraint firstAttribute="trailing" secondItem="c3i-SA-w6s" secondAttribute="trailing" constant="8" id="3os-jm-qH1"/>
+                                    <constraint firstItem="qT2-6B-NuX" firstAttribute="top" secondItem="d5Z-nL-RUb" secondAttribute="top" constant="12" id="G2P-fd-HmN"/>
+                                    <constraint firstItem="qT2-6B-NuX" firstAttribute="leading" secondItem="d5Z-nL-RUb" secondAttribute="leading" constant="8" id="Oor-PQ-93e"/>
+                                    <constraint firstItem="vL9-fF-Fbs" firstAttribute="leading" secondItem="d5Z-nL-RUb" secondAttribute="leading" constant="8" id="QT6-JB-zWd"/>
+                                    <constraint firstItem="sg9-LH-gp3" firstAttribute="top" secondItem="vL9-fF-Fbs" secondAttribute="bottom" constant="8" id="RxD-TL-bWV"/>
+                                    <constraint firstItem="1J3-St-7ty" firstAttribute="top" secondItem="d5Z-nL-RUb" secondAttribute="top" constant="13" id="Tma-Lx-cOT"/>
+                                    <constraint firstAttribute="trailing" secondItem="vL9-fF-Fbs" secondAttribute="trailing" constant="8" id="WZw-ln-3bl"/>
+                                    <constraint firstItem="vL9-fF-Fbs" firstAttribute="top" secondItem="qT2-6B-NuX" secondAttribute="bottom" constant="25" id="XRh-ws-EOi"/>
+                                    <constraint firstItem="c3i-SA-w6s" firstAttribute="top" secondItem="sg9-LH-gp3" secondAttribute="bottom" constant="8" id="Xab-sU-TgO"/>
+                                    <constraint firstAttribute="trailing" secondItem="1J3-St-7ty" secondAttribute="trailing" constant="8" id="aC7-us-Kbv"/>
+                                    <constraint firstItem="c3i-SA-w6s" firstAttribute="top" secondItem="sg9-LH-gp3" secondAttribute="bottom" constant="8" id="cNd-sK-A9s"/>
+                                    <constraint firstItem="sg9-LH-gp3" firstAttribute="top" secondItem="vL9-fF-Fbs" secondAttribute="bottom" constant="8" id="cVV-dS-q3W"/>
+                                    <constraint firstItem="1J3-St-7ty" firstAttribute="leading" secondItem="qT2-6B-NuX" secondAttribute="trailing" constant="3" id="d2M-9Q-gy2"/>
+                                    <constraint firstItem="sg9-LH-gp3" firstAttribute="leading" secondItem="d5Z-nL-RUb" secondAttribute="leading" constant="8" id="dgU-LU-djN"/>
+                                    <constraint firstItem="vL9-fF-Fbs" firstAttribute="top" secondItem="qT2-6B-NuX" secondAttribute="bottom" constant="25" id="gcZ-3G-Ld9"/>
+                                    <constraint firstItem="c3i-SA-w6s" firstAttribute="leading" secondItem="d5Z-nL-RUb" secondAttribute="leading" constant="8" id="tiF-eg-pS6"/>
+                                    <constraint firstAttribute="bottom" secondItem="c3i-SA-w6s" secondAttribute="bottom" constant="8" id="vnZ-bn-wJo"/>
+                                    <constraint firstAttribute="trailing" secondItem="sg9-LH-gp3" secondAttribute="trailing" constant="8" id="wsi-5s-SkU"/>
+                                    <constraint firstItem="1J3-St-7ty" firstAttribute="leading" secondItem="qT2-6B-NuX" secondAttribute="trailing" constant="3" id="xkE-la-NQg"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="0.29460081335616439" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="d5Z-nL-RUb" secondAttribute="trailing" id="c4F-xo-3Qh"/>
-                            <constraint firstItem="d5Z-nL-RUb" firstAttribute="leading" secondItem="XqK-Qo-iuy" secondAttribute="leading" id="fyj-69-s1J"/>
-                            <constraint firstItem="d5Z-nL-RUb" firstAttribute="top" secondItem="1ZW-aB-CpV" secondAttribute="bottom" id="kzk-vt-O51"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="DZG-KQ-VDq"/>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
